Add some experiments and include browser client

--- a/src/pages/home.pug
+++ b/src/pages/home.pug
@@ -3,4 +3,5 @@ html
   head
   body
     h1 Foobar
+    div(data-component='MyComponent' data-props='{"name":"Alfred"}')
     script(src='/static/client.js')
