Add demonstrational components

--- a/src/pages/home.pug
+++ b/src/pages/home.pug
@@ -3,5 +3,7 @@ html
   head
   body
     h1 Foobar
-    div(data-component='MyComponent' data-props='{"name":"Alfred"}')
+    div(data-component='Inplace' data-props='{"name":"title"}')
+    div(data-component='MyComponent')
+    div(data-component='Toolbar')
     script(src='/static/client.js')
