Add mongodb; adapt rendering mechanism
This closes #1.

--- a/src/objects/posts.pug
+++ b/src/objects/posts.pug
@@ -4,4 +4,4 @@ html
   body
     h1 Blog Post
     h2(data-component='Inplace', data-props='{"name":"title","tag":"span"}')
-    script(src='/static/client.js')
+    script(data-cms)
