--- a/src/pages/home.pug
+++ b/src/pages/home.pug
@@ -6,4 +6,4 @@ html
     div(data-component='Inplace' data-props='{"name":"title"}')
     div(data-component='MyComponent')
     div(data-component='Toolbar')
-    script(src='/static/client.js')
+    script(data-cms)
