Add multi-language examples

--- a/src/objects/posts.pug
+++ b/src/objects/posts.pug
@@ -1,7 +1,6 @@
-doctype html
-html
-  head
-  body
+extends ../includes/base
+
+block content
+  .container
     h1 Blog Post
-    h2(data-component='Inplace', data-props='{"name":"title","tag":"span"}')
-    script(data-cms)
+    div(data-component='Inplace', data-props='{"name":"title","tag":"h2"}')
