Add example for no-language fields

--- a/src/includes/base.pug
+++ b/src/includes/base.pug
@@ -7,6 +7,8 @@ html
     title Bootstrap 101 Template
     link(href='/css/bootstrap.min.css' rel='stylesheet')
   body
+    .logo
+      div(style='text-transform:uppercase' data-component='Inplace' data-props='{"name":"logo"}')
     .header
       h1.page-header(data-component='Inplace', data-props='{"name":"header"}')
     block content
