--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,4 +4,7 @@ block content
   .container
     h1 Foobar
     div(data-component='Inplace' data-props='{"name":"title"}')
+    p
+      | Here comes the noLangField
+    div(data-component='Inplace' data-props='{"name":"image"}')
     div(data-component='MyComponent')
