Resolve asset paths from domain

--- a/src/includes/base.pug
+++ b/src/includes/base.pug
@@ -12,5 +12,5 @@ html
     .header
       h1.page-header(data-component='Inplace', data-props='{"name":"header"}')
     block content
-    div(data-component='Toolbar')
+    div(data-webdesignio-remove data-component='Toolbar')
     script(data-webdesignio-remove src=asset('/client.js'))
