Add saving indicator

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -5,6 +5,6 @@ block content
     h1 Foobar
     div(data-component='Inplace' data-props='{"name":"title"}')
     p
-      | Here comes the noLangField
+      | Here comes the noLangField.
     div(data-component='Inplace' data-props='{"name":"image"}')
     div(data-component='MyComponent')
