add some default content

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,6 +4,7 @@ block content
   .container
     h1 Foobar
     div(data-component='Inplace' data-props='{"name":"title"}')
+      | Here is some default content.
     p
       | Here comes the noLangField.
     div(data-component='Inplace' data-props='{"name":"image"}')
