Cleanup and add @webdesignio/react

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -13,7 +13,7 @@ block content
     .container: .row
       .hero-text.text-center
         h1.mb-0.mt-30(data-component='Inplace' data-props='{"name":"title"}') Your first webdesign.io page!
-        a.btn.btn-lg.mt-30(data-component='Inplace' data-props='{"name":"title3"}') Read The Docs
+        a.btn.btn-lg.mt-30(href='https://www.webdesignio.com' target='_blank') Read The Docs
     .mountain-1
     .mountain-2
 
@@ -22,17 +22,17 @@ block content
       ul.row.list-inline
         li.col-sm-4.text-center.mb-40
           .icon-large.icon-signs.mb-20
-          h4(data-component='Inplace') EDIT TEXT INLINE
+          h4(data-component='Inplace', data-props='{"name":"feature-1"}') EDIT TEXT INLINE
           p.
             When you enter into any new area of science, you almost always find yourself with a baffling new language of technical terms to learn before you can converse with the experts.
         li.col-sm-4.text-center.mb-40
           .icon-large.icon-expand.mb-20
-          h4(data-component='Inplace') RESIZE IMAGES
+          h4 RESIZE IMAGES
           p.
             When you enter into any new area of science, you almost always find yourself with a baffling new language of technical terms to learn before you can converse with the experts.
         li.col-sm-4.text-center.mb-40
           .icon-large.icon-text.mb-20
-          h4(data-component='Inplace') FULL TEXT EDITOR
+          h4 FULL TEXT EDITOR
           p.
             When you enter into any new area of science, you almost always find yourself with a baffling new language of technical terms to learn before you can converse with the experts.
 
