Add save success indicator

--- a/src/includes/base.pug
+++ b/src/includes/base.pug
@@ -34,6 +34,7 @@ html
   body
 
     block navigation
+      div(data-component='SaveSuccessIndicator')
       header.header
         .container: .row
           .col-sm-4
